--- a/index.html
+++ b/index.html
@@ -5,21 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <!--Шапка сайта-->
     <header>
-      <a href="">WebStudio</a>
+      <a href="" class="logo">Web<span class="colortext">Studio</span></a>
       <!--<Блок навигации-->
       <nav>
-        <ul>
-          <li><a href="./index.html">Студия</a></li>
-          <li><a href="./portfolio.html">Портфолио</a></li>
-          <li><a href="">Контакты</a></li>
+        <ul class="site-nav list">
+          <li><a href="./index.html" class="link current">Студия</a></li>
+          <li><a href="./portfolio.html" class="link">Портфолио</a></li>
+          <li><a href="" class="link">Контакты</a></li>
         </ul>
       </nav>
       <!--Блок контактов-->
-      <ul>
+      <ul class="contact-nav list">
         <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
         <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
       </ul>
@@ -27,41 +28,42 @@
     <!--Контент страницы-->
     <main>
       <div>
-        <section>
-          <h1>
+        <!-- Герой -->
+        <section class="hero">
+          <h1 class="hero-title">
             Эффективные решения <br />
             для вашего бизнеса
           </h1>
-          <button type="button">Заказать услугу</button>
+          <button type="button" class="button">Заказать услугу</button>
         </section>
       </div>
-      <section>
-        <!--Скилы компании-->
-        <h2>Скилы компании</h2>
-        <ul>
+      <!--Скилы компании-->
+      <section class="section">
+        <h2 class="section-title">Скилы компании</h2>
+        <ul class="skills list">
           <li>
-            <h3>Внимание к деталям</h3>
+            <h3 class="title">Внимание к деталям</h3>
             <p>
               Идейные соображения, а также начало повседневной работы по
               формированию позиции.
             </p>
           </li>
           <li>
-            <h3>Пунктуальность</h3>
+            <h3 class="title">Пунктуальность</h3>
             <p>
               Задача организации, в особенности же рамки и место обучения кадров
               влечет за собой.
             </p>
           </li>
           <li>
-            <h3>Планирование</h3>
+            <h3 class="title">Планирование</h3>
             <p>
               Равным образом консультация с широким активом в значительной
               степени обуславливает.
             </p>
           </li>
           <li>
-            <h3>Современные технологии</h3>
+            <h3 class="title">Современные технологии</h3>
             <p>
               Значимость этих проблем настолько очевидна, что реализация
               плановых заданий.
@@ -69,10 +71,10 @@
           </li>
         </ul>
       </section>
-      <section>
-        <!--Блок картинок-->
-        <h2>Чем мы занимаемся</h2>
-        <ul>
+      <!--Блок картинок-->
+      <section class="section">
+        <h2 class="section-title">Чем мы занимаемся</h2>
+        <ul class="images list">
           <li>
             <img
               src="./images/img.jpg"
@@ -96,45 +98,50 @@
           </li>
         </ul>
       </section>
-      <section>
-        <!--Наша команда-->
-        <h2>Наша команда</h2>
-        <ul>
+      <!--Наша команда-->
+      <section class="section">
+        <h2 class="section-title">Наша команда</h2>
+        <ul class="team list">
           <li>
             <img src="./images/img3.jpg" alt="Игорь Демьяненко" width="270" />
-            <h3>Игорь Демьяненко</h3>
+            <h3 class="title">Игорь Демьяненко</h3>
             <p>Product Designer</p>
           </li>
           <li>
             <img src="./images/img4.jpg" alt="Ольга Репина" width="270" />
-            <h3>Ольга Репина</h3>
+            <h3 class="title">Ольга Репина</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
             <img src="./images/img5.jpg" alt="Николай Тарасов" width="270" />
-            <h3>Николай Тарасов</h3>
+            <h3 class="title">Николай Тарасов</h3>
             <p>Marketing</p>
           </li>
           <li>
             <img src="./images/img6.jpg" alt="Михаил Ермаков" width="270" />
-            <h3>Михаил Ермаков</h3>
+            <h3 class="title">Михаил Ермаков</h3>
             <p>UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
+    <!--Блок контактов-->
     <footer>
-      <!--Блок контактов-->
-      <a href="">WebStudio</a>
-      <address>
-        <a href="https://goo.gl/maps/7qp37BieYdtHUAUU6" target="_blank"
-          >г. Киев, пр-т Леси Украинки, 26
-        </a>
-      </address>
-      <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
-      </ul>
+      <div class="section-footer">
+        <a href="" class="logo">Web<span class="colortext">Studio</span></a>
+        <address>
+          <a
+            href="https://goo.gl/maps/7qp37BieYdtHUAUU6"
+            target="_blank"
+            class="adress"
+            >г. Киев, пр-т Леси Украинки, 26
+          </a>
+        </address>
+        <ul class="contact-footer list">
+          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        </ul>
+      </div>
     </footer>
   </body>
 </html>
