--- a/index.html
+++ b/index.html
@@ -49,28 +49,28 @@
         <ul class="skills list">
           <li>
             <h3 class="title">Внимание к деталям</h3>
-            <p>
+            <p class="skills-text">
               Идейные соображения, а также начало повседневной работы по
               формированию позиции.
             </p>
           </li>
           <li>
             <h3 class="title">Пунктуальность</h3>
-            <p>
+            <p class="skills-text">
               Задача организации, в особенности же рамки и место обучения кадров
               влечет за собой.
             </p>
           </li>
           <li>
             <h3 class="title">Планирование</h3>
-            <p>
+            <p class="skills-text">
               Равным образом консультация с широким активом в значительной
               степени обуславливает.
             </p>
           </li>
           <li>
             <h3 class="title">Современные технологии</h3>
-            <p>
+            <p class="skills-text">
               Значимость этих проблем настолько очевидна, что реализация
               плановых заданий.
             </p>
@@ -116,17 +116,17 @@
           <li>
             <img src="./images/img4.jpg" alt="Ольга Репина" width="270" />
             <h3 class="title">Ольга Репина</h3>
-            <p>Frontend Developer</p>
+            <p class="team-text">Frontend Developer</p>
           </li>
           <li>
             <img src="./images/img5.jpg" alt="Николай Тарасов" width="270" />
             <h3 class="title">Николай Тарасов</h3>
-            <p>Marketing</p>
+            <p class="team-text">Marketing</p>
           </li>
           <li>
             <img src="./images/img6.jpg" alt="Михаил Ермаков" width="270" />
             <h3 class="title">Михаил Ермаков</h3>
-            <p>UI Designer</p>
+            <p class="team-text">UI Designer</p>
           </li>
         </ul>
       </section>
