--- a/portfolio.html
+++ b/portfolio.html
@@ -35,17 +35,18 @@
     <main>
       <!--Фильтр проектов-->
       <section class="buttons-section">
+        <h1>Фильтр проектов</h1>
         <ul class="buttons-list list">
-          <li class="buttons-btn"><button type="button">Все</button></li>
-          <li class="buttons-btn"><button type="button">Веб-сайты</button></li>
-          <li class="buttons-btn"><button type="button">Приложения</button></li>
-          <li class="buttons-btn"><button type="button">Дизайн</button></li>
-          <li class="buttons-btn"><button type="button">Маркетинг</button></li>
+          <li><button type="button" class="buttons-btn">Все</button></li>
+          <li><button type="button" class="buttons-btn">Веб-сайты</button></li>
+          <li><button type="button" class="buttons-btn">Приложения</button></li>
+          <li><button type="button" class="buttons-btn">Дизайн</button></li>
+          <li><button type="button" class="buttons-btn">Маркетинг</button></li>
         </ul>
       </section>
       <!--Проекты компании-->
       <section class="projects-section">
-        <h1>Проекты компании</h1>
+        <h2>Проекты компании</h2>
         <ul class="projects-list list">
           <li class="projects-item">
             <img
@@ -55,7 +56,7 @@
               height="294"
             />
             <h3 class="projects-section-title">Технокряк</h3>
-            <p>Веб-сайт</p>
+            <p class="projects-section-text">Веб-сайт</p>
           </li>
           <li class="projects-item">
             <img
@@ -67,7 +68,7 @@
             <h3 class="projects-section-title">
               Постер New Orlean vs Golden Star
             </h3>
-            <p>Дизайн</p>
+            <p class="projects-section-text">Дизайн</p>
           </li>
           <li class="projects-item">
             <img
@@ -77,7 +78,7 @@
               height="294"
             />
             <h3 class="projects-section-title">Ресторан Seafood</h3>
-            <p>Дизайн</p>
+            <p class="projects-section-text">Дизайн</p>
           </li>
           <li class="projects-item">
             <img
@@ -87,7 +88,7 @@
               height="294"
             />
             <h3 class="projects-section-title">Проект Prime</h3>
-            <p>Маркетинг</p>
+            <p class="projects-section-text">Маркетинг</p>
           </li>
           <li class="projects-item">
             <img
@@ -97,7 +98,7 @@
               height="294"
             />
             <h3 class="projects-section-title">Проект Boxes</h3>
-            <p>Приложение</p>
+            <p class="projects-section-text">Приложение</p>
           </li>
           <li class="projects-item">
             <img
@@ -107,7 +108,7 @@
               height="294"
             />
             <h3 class="projects-section-title">Inspiration has no Borders</h3>
-            <p>Веб-сайт</p>
+            <p class="projects-section-text">Веб-сайт</p>
           </li>
           <li class="projects-item">
             <img
@@ -117,7 +118,7 @@
               height="294"
             />
             <h3 class="projects-section-title">Издание Limited Edition</h3>
-            <p>Дизайн</p>
+            <p class="projects-section-text">Дизайн</p>
           </li>
           <li class="projects-item">
             <img
@@ -127,7 +128,7 @@
               height="294"
             />
             <h3 class="projects-section-title">Проект LAB</h3>
-            <p>Маркетинг</p>
+            <p class="projects-section-text">Маркетинг</p>
           </li>
           <li class="projects-item">
             <img
@@ -137,7 +138,7 @@
               height="294"
             />
             <h3 class="projects-section-title">Growing Business</h3>
-            <p>Приложение</p>
+            <p class="projects-section-text">Приложение</p>
           </li>
         </ul>
       </section>
