--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -16,33 +16,43 @@
   <body>
     <!--Шапка сайта-->
     <header>
-      <a href="" class="logo">Web<span class="colortext">Studio</span></a>
+      <a href="" class="logo">Web<span class="color-text">Studio</span></a>
       <!--<Блок навигации-->
       <nav>
         <ul class="site-nav list">
-          <li><a href="./index.html" class="link current">Студия</a></li>
-          <li><a href="./portfolio.html" class="link">Портфолио</a></li>
-          <li><a href="" class="link">Контакты</a></li>
+          <li>
+            <a href="./index.html" class="site-nav-link current">Студия</a>
+          </li>
+          <li>
+            <a href="./portfolio.html" class="site-nav-link">Портфолио</a>
+          </li>
+          <li><a href="" class="site-nav-link">Контакты</a></li>
         </ul>
       </nav>
       <!--Блок контактов-->
       <ul class="contact-nav list">
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        <li>
+          <a href="mailto:info@devstudio.com" class="contact-nav-link"
+            >info@devstudio.com</a
+          >
+        </li>
+        <li>
+          <a href="tel:+380961111111" class="contact-nav-link"
+            >+38 096 111 11 11</a
+          >
+        </li>
       </ul>
     </header>
     <!--Контент страницы-->
     <main>
-      <div>
-        <!-- Герой -->
-        <section class="hero">
-          <h1 class="hero-title">
-            Эффективные решения <br />
-            для вашего бизнеса
-          </h1>
-          <button type="button" class="button">Заказать услугу</button>
-        </section>
-      </div>
+      <!-- Герой -->
+      <section class="hero">
+        <h1 class="hero-title">
+          Эффективные решения <br />
+          для вашего бизнеса
+        </h1>
+        <button type="button" class="button">Заказать услугу</button>
+      </section>
       <!--Скилы компании-->
       <section class="section">
         <h2 class="section-title">Скилы компании</h2>
@@ -105,28 +115,28 @@
         </ul>
       </section>
       <!--Наша команда-->
-      <section class="section">
+      <section class="section-iteam">
         <h2 class="section-title">Наша команда</h2>
         <ul class="team list">
-          <li>
+          <li class="team-item">
             <img src="./images/img3.jpg" alt="Игорь Демьяненко" width="270" />
             <h3 class="title">Игорь Демьяненко</h3>
-            <p>Product Designer</p>
+            <p class="team-text" lang="en">Product Designer</p>
           </li>
-          <li>
+          <li class="team-item">
             <img src="./images/img4.jpg" alt="Ольга Репина" width="270" />
             <h3 class="title">Ольга Репина</h3>
-            <p class="team-text">Frontend Developer</p>
+            <p class="team-text" lang="en">Frontend Developer</p>
           </li>
-          <li>
+          <li class="team-item">
             <img src="./images/img5.jpg" alt="Николай Тарасов" width="270" />
             <h3 class="title">Николай Тарасов</h3>
-            <p class="team-text">Marketing</p>
+            <p class="team-text" lang="en">Marketing</p>
           </li>
-          <li>
+          <li class="team-item">
             <img src="./images/img6.jpg" alt="Михаил Ермаков" width="270" />
             <h3 class="title">Михаил Ермаков</h3>
-            <p class="team-text">UI Designer</p>
+            <p class="team-text" lang="en">UI Designer</p>
           </li>
         </ul>
       </section>
@@ -142,11 +152,19 @@
             class="adress"
             >г. Киев, пр-т Леси Украинки, 26
           </a>
+          <ul class="contact-footer list">
+            <li>
+              <a href="mailto:info@devstudio.com" class="contact-footer-list"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a href="tel:+380961111111" class="contact-footer-list"
+                >+38 096 111 11 11</a
+              >
+            </li>
+          </ul>
         </address>
-        <ul class="contact-footer list">
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
-        </ul>
       </div>
     </footer>
   </body>
